[project]
package-mode = false
name = "statspot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent",email = "guivanovincent13@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
